# Cerious-Systems---Desktop-OS-Agnostic-

./: .env.example  .gitignore  Install-CeriousStartupService.ps1  Launch-Cerious.vbs  Launch-CeriousStartupService.vbs  README.md  Start-CeriousApp.ps1  Start-CeriousStartupService.ps1  package.json
.github/workflows/: native-price-feed.yml
apps/terminal/: index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.cjs  tailwind.config.js  vite.config.ts
apps/terminal/public/: manifest.webmanifest
apps/terminal/src/: App.tsx  index.css  main.tsx  types.ts
apps/terminal/src/components/: ErrorBoundary.tsx  OrderBook2.tsx  PortalGate.tsx  WorkspaceCanvas.tsx
apps/terminal/src/hooks/: useBroadcastSync.ts  useGatewayEventBook.ts
apps/terminal/src/platform/: transport.ts
apps/terminal/src/services/: engineStream.ts  settings.ts  workspaceServices.ts
apps/terminal/src/store/: index.ts
apps/terminal/src/utils/: bars.ts  marketDisplay.ts
clients/openfin-terminal/: README.md  package-lock.json  package.json
clients/openfin-terminal/installer/: README.md
clients/openfin-terminal/manifests/: local.json  production.template.json  staging.template.json
clients/openfin-terminal/scripts/: Build-CeriousOpenFinPackage.ps1  Install-CeriousDesktopShortcut.ps1  Launch-CeriousOpenFin.ps1  validate-manifests.mjs
clients/qt-terminal/: CMakeLists.txt  CMakePresets.json  README.md
clients/qt-terminal/scripts/: build-linux.sh  build-macos.sh  build-win.ps1
clients/qt-terminal/src/: GatewayClient.cpp  GatewayClient.hpp  MainWindow.cpp  MainWindow.hpp  main.cpp
data/advisory/: daily-summary.json  intelligence.json  macro-regime.json  meta.json  opportunity-map.json
data/algo-definitions/: _definition-registry.json  algo-1781756303668.json  algo-1781756364657.json  algo-1781756454736.json  algo-1781757711392.json  algo-1781757730036.json  algo-1781758312346.json  algo-1781758341826.json  algo-1781758888908.json  algo-1781761502337.json  algo-1781761542261.json  algo-1781761573364.json  algo-1781761626775.json  algo-1781761752035.json  algo-1781761786045.json  algo-1781783009611.json  algo-1781785483625.json  algo-1781785537734.json  algo-1781785567259.json  algo-1781785599400.json  algo-1781872811359.json  algo-1781872853846.json  algo-1781872969276.json  algo-1781873021219.json  algo-1781873059409.json  algo-1781873089860.json  algo-1781873191346.json  algo-1782101613709.json  algo-1782101649306.json  algo-1782101652290.json  algo-1782101654570.json  algo-1782101663324.json  algo-1782101694240.json  algo-1782102408485.json  algo-1782102444902.json  algo-1782102555093.json  algo-1782102586910.json  algo-1782106194108.json  algo-1782106234229.json  algo-1782106265519.json  (+20 more)
data/credentials/: README.md
data/exchange/sessions/2026-06-29/: fills-1782709319710.csv  state.json
data/exchange/sessions/2026-06-30/: state.json
data/exchange/sessions/2026-07-01/: state.json
data/exchange/sessions/2026-07-02/: state.json
data/exchange/sessions/2026-07-05/: state.json
data/exchange/sessions/2026-07-06/: state.json
data/exchange/sessions/2026-07-07/: state.json
data/fills/: fills-journal.json
data/product-definitions/: product-definitions.json
data/window-payloads/cerious/: audit.json  daily-summary.json  intelligence.json  macro-regime.json  news-subscriptions.json  news.json  notional.json  opportunity-map.json  trade-analytics.json
data/window-payloads/cerious/content/: atrZScoreEngine.json  executionRules.json  liveApiArchitecture.json  modelResearchGovernance.json  moneyManagement.json  orderLayeringTechniques.json  riskChecklist.json  sourceNotes.json
data/workspace-store/tsturiale/: latest.json  native-last-save.json
data/workspace-store/tsturiale/desktop/: native-last-save.json  operator-1__ted-s.json
deploy/systemd/: README.md  cerious-exchange.service  cerious-gateway.service  cerious.env.example
docs/: ARCHITECTURE.md  CANONICAL_FILE_LAYOUT.md  CERIOUS_TARGET_PRODUCT_ARCHITECTURE.md  CHART_ENGINE_WORK_QUEUE.md  CLOUD_MIGRATION_AUDIT.md  CURRENT_BUILD_ARCHITECTURE.md  DEPLOYMENT_READINESS_AUDIT.md  LAST_KNOWN_GOOD_CLOUD_REACT_CPP_BUILD.md  MACBOOK_AND_LINUX_RUNBOOK.md  OPENFIN_DESKTOP_WORKFLOW.md  QT_NATIVE_TERMINAL.md  TRANSPORT_MANIFEST.md
native/: README.md
native/cerious-exchange-cpp/: CMakeLists.txt  README.md
native/cerious-exchange-cpp/src/: DeterministicExchange.hpp  sandbox.cpp  server.cpp
native/cerious-host-cpp/: CMakeLists.txt
native/cerious-host-cpp/src/: cerious_host_common.hpp  host_service.cpp  tray.cpp
native/fix-engine-cpp/: CMakeLists.txt  README.md  build-linux.sh  build-win.ps1
native/fix-engine-cpp/src/: aeron_transport.hpp  fix_http_server.hpp  fix_journal.hpp  fix_message.hpp  fix_session.hpp  fix_sim.hpp  fix_tcp.hpp  main.cpp  order_router.hpp
native/gateway-cpp/: CMakeLists.txt
native/gateway-cpp/src/: main.cpp
native/price-feed-cpp/: CMakeLists.txt  README.md  build-linux.sh  build-win.ps1
native/price-feed-cpp/src/: history.cpp  main.cpp
scripts/: bootstrap-unix.sh  build-native-unix.sh  launch-openfin-unix.sh  make-openfin-manifest.mjs  start-backend-unix.sh
tools/: audit-react-dumb-terminal.mjs
